[TLCS90] Add TLCS-90 Assembler
asm tlcs90    13956 (13956)   359 (359)
dis tlcs90    12145 (  -38)   301 (  0)

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.5.3
 author=Tadashi G. Takaoka
 maintainer=Tadashi G. Takaoka <tadashi.g.takaoka@gmail.com>
 sentence=Cross assembler and disassembler for retro CPUs
-paragraph=Assembler and Disassembler for MC6809, MC6811, MPS6502, i8085, i8080, Z80, Z8, TMS9900, i8086, MC68000, Z8000, NS32032
+paragraph=Assembler and Disassembler for MC6809, MC6811, MPS6502, i8085, i8080, Z80, Z8, TLCS90, TMS9900, i8086, MC68000, Z8000, NS32032
 category=Other
 url=https://github.com/tgtakaoka/libasm
 architectures=*
