--- a/test/Makefile
+++ b/test/Makefile
@@ -180,9 +180,9 @@ test_z80: test_asm_z80 test_dis_z80
 test_z8: test_asm_z8 test_dis_z8
 	./test_asm_z8
 	./test_dis_z8
-test_tlcs90:  test_dis_tlcs90 #test_asm_tlcs90
+test_tlcs90:  test_asm_tlcs90 test_dis_tlcs90
+	./test_asm_tlcs90
 	./test_dis_tlcs90
-#	./test_asm_tlcs90
 test_ins8060: test_asm_ins8060 test_dis_ins8060
 	./test_asm_ins8060
 	./test_dis_ins8060
@@ -223,7 +223,7 @@ TEST_OBJS= \
 	test_asm_i8080.o   test_dis_i8080.o   \
 	test_asm_z80.o     test_dis_z80.o     \
 	test_asm_z8.o      test_dis_z8.o      \
-	                   test_dis_tlcs90.o  \
+	test_asm_tlcs90.o  test_dis_tlcs90.o  \
 	test_asm_ins8060.o test_dis_ins8060.o \
 	test_asm_ins8070.o test_dis_ins8070.o \
 	test_asm_cdp1802.o test_dis_cdp1802.o \
@@ -267,7 +267,7 @@ OBJS	 = \
 	$(OBJS_i8080)   asm_i8080.o   dis_i8080.o   \
 	$(OBJS_z80)     asm_z80.o     dis_z80.o     \
 	$(OBJS_z8)      asm_z8.o      dis_z8.o      \
-	$(OBJS_tlcs90)                dis_tlcs90.o  \
+	$(OBJS_tlcs90)  asm_tolcs90.o dis_tlcs90.o  \
 	$(OBJS_ins8060) asm_ins8060.o dis_ins8060.o \
 	$(OBJS_ins8070) asm_ins8070.o dis_ins8070.o \
 	$(OBJS_cdp1802) asm_cdp1802.o dis_cdp1802.o \
@@ -306,6 +306,8 @@ test_dis_z80:     test_dis_z80.o     dis_z80.o     $(OBJS_z80)     $(OBJS_dis) $
 test_asm_z8:      test_asm_z8.o      asm_z8.o      $(OBJS_z8)      $(OBJS_asm) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_z8:      test_dis_z8.o      dis_z8.o      $(OBJS_z8)      $(OBJS_dis) $(OBJS_test)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_asm_tlcs90:  test_asm_tlcs90.o  asm_tlcs90.o  $(OBJS_tlcs90)  $(OBJS_asm) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_tlcs90:  test_dis_tlcs90.o  dis_tlcs90.o  $(OBJS_tlcs90)  $(OBJS_dis) $(OBJS_test)
 	$(CXX) -o $@ $(CXXFLAGS) $^
