--- a/test/Makefile.vars
+++ b/test/Makefile.vars
@@ -37,7 +37,7 @@ TGT_mos6502 = mos6502 w65sc02 r65c02 w65c02s w65c816
 TGT_i8051   = i8051
 TGT_i8080   = i8080 i8085
 TGT_z80     = z80 i8080_z80syn i8085_z80syn
-TGT_z8      = z8 z86c40 z88
+TGT_z8      = z8 z86c z88
 TGT_tlcs90  = tlcs90
 TGT_ins8060 = ins8060
 TGT_ins8070 = ins8070
@@ -67,7 +67,7 @@ CPU_z80      = Z80
 CPU_i8080_z80syn = 8080
 CPU_i8085_z80syn = 8085
 CPU_z8       = Z8601
-CPU_z86c40   = Z86C40
+CPU_z86c     = Z86C40
 CPU_z88      = Z88C00
 CPU_tlcs90   = TLCS90
 CPU_ins8060  = SC/MP
