--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -39,7 +39,7 @@ endef
 # target list for each architecture.
 TGT_mc6809  = mc6809 hd6309
 TGT_mc6800  = mc6800 mc6801 mc68hc11 hd6301
-TGT_mos6502 = mos6502 w65sc02 r65c02 w65c02s w65c816
+TGT_mos6502 = mos6502 g65sc02 r65c02 w65c02s w65c816
 TGT_i8051   = i8051
 TGT_i8080   = i8080 i8085
 TGT_z80     = z80 i8080_z80syn i8085_z80syn
@@ -62,7 +62,7 @@ CPU_mc6801   = 6801
 CPU_mc68hc11 = 6811
 CPU_hd6301   = 6301
 CPU_mos6502  = 6502
-CPU_w65sc02  = 65SC02
+CPU_g65sc02  = 65SC02
 CPU_r65c02   = 65C02
 CPU_w65c02s  = W65C02S
 CPU_w65c816  = 65816
@@ -89,7 +89,7 @@ CPU_z8k2     = Z8002
 CPU_ns32k    = 32032
 
 # targets with Motorola S19 format
-S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) mos6502 w65sc02 r65c02 w65c02s m6811
+S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) mos6502 g65sc02 r65c02 w65c02s m6811
 # targets with Motorola S28 format
 S28_OUTS = w65c816 $(TGT_mc68000) m68k
 # other targets use Intel HEX format
