--- a/test/autogen/Makefile
+++ b/test/autogen/Makefile
@@ -59,13 +59,13 @@ $(eval $(foreach a,$(ARCHS),$(foreach t,$(TGT_$(a)),\
 generate: $(GEN_OUTS)
 
 ASM_TESTS = $(patsubst %.asm,%,$(wildcard gen_*.asm))
-ASM_OUTS  = $(foreach f,$(ASM_TESTS),$(f).$(call out-fmt,$(f)))
+ASM_OUTS  = $(foreach f,$(ASM_TESTS),$(f).$(call out-ext,$(f)))
 define asm-rule # source stem fmt
 asm-$(2).$(3): $(1)
 	asm -o $(2).$(3) -l $(2).lst $$^
 
 endef
-$(eval $(foreach f,$(ASM_TESTS),$(call asm-rule,$(f).asm,$(f),$(call out-fmt,$(f)))))
+$(eval $(foreach f,$(ASM_TESTS),$(call asm-rule,$(f).asm,$(f),$(call out-ext,$(f)))))
 
 asm-test: clean-asm $(ASM_OUTS:%=asm-%)
 clean-asm:
@@ -73,21 +73,17 @@ clean-asm:
 
 ASL_exclude = gen_i8086 gen_ns32032
 ASL_TESTS = $(foreach t,$(ASM_TESTS),$(if $(filter $(t),$(ASL_exclude)),,$(t)))
-ASL_OUTS  = $(foreach f,$(ASL_TESTS),$(f).$(call out-fmt,$(f)))
+ASL_OUTS  = $(foreach f,$(ASL_TESTS),$(f).$(call out-ext,$(f)))
 define asl-file # stem
 $(if $(wildcard $(1).asl),$(1).asl,$(1).asm)
 endef
-define asl-rule # source stem fmt
+define asl-rule # source stem suffix format
 asl-$(2).$(3): $(1)
 	asl $$(ASL_FLAGS) -L $$^
-	if [ $(3) = hex ]; then \
-	    p2hex $$(P2HEX_FLAGS) -F Intel   $(2).p $(2).$(3); \
-	else \
-	    p2hex $$(P2HEX_FLAGS) -F Moto +5 $(2).p $(2).$(3); \
-	fi
+	p2hex $$(P2HEX_FLAGS) -F $(4) $(2).p $(2).$(3)
 
 endef
-$(eval $(foreach f,$(ASL_TESTS),$(call asl-rule,$(call asl-file,$(f)),$(f),$(call out-fmt,$(f)))))
+$(eval $(foreach f,$(ASL_TESTS),$(call asl-rule,$(call asl-file,$(f)),$(f),$(call out-ext,$(f)),$(call out-fmt,$(f)))))
 
 asl-test: clean-asl $(ASL_OUTS:%=asl-%)
 clean-asl:
@@ -95,7 +91,7 @@ clean-asl:
 
 
 GAS_TESTS = $(wildcard gen_*.gas)
-GAS_OUTS  = $(foreach f,$(GAS_TESTS),$(f:.gas=).$(call out-fmt,$(f:.gas=)))
+GAS_OUTS  = $(foreach f,$(GAS_TESTS),$(f:.gas=).$(call out-ext,$(f:.gas=)))
 gas-test: clean-gas $(GAS_OUTS)
 clean-gas:
 	-rm -f $(GAS_OUTS)
