--- a/test/reference/Makefile
+++ b/test/reference/Makefile
@@ -24,38 +24,34 @@ all:
 -include ../Makefile.gas
 
 ASM_TESTS = $(patsubst %.asm,%,$(wildcard test_*.asm))
-ASM_OUTS  = $(foreach f,$(ASM_TESTS),$(f).$(call out-fmt,$(f)))
+ASM_OUTS  = $(foreach f,$(ASM_TESTS),$(f).$(call out-ext,$(f)))
 define asm-rule # file fmt
 asm-$(1).$(2): $(1).asm
 	asm -o $(1).$(2) -l $(1).lst $$^
 
 endef
-$(eval $(foreach f,$(ASM_TESTS),$(call asm-rule,$(f),$(call out-fmt,$(f)))))
+$(eval $(foreach f,$(ASM_TESTS),$(call asm-rule,$(f),$(call out-ext,$(f)))))
 
 asm-test: clean-asm $(ASM_OUTS:%=asm-%)
 clean-asm:
 	-rm -f $(ASM_OUTS)
 
 ASL_TESTS = $(patsubst %.asl,%,$(wildcard test_*.asl))
-ASL_OUTS  = $(foreach f,$(ASL_TESTS),$(f).$(call out-fmt,$(f)))
-define asl-rule # file fmt
+ASL_OUTS  = $(foreach f,$(ASL_TESTS),$(f).$(call out-ext,$(f)))
+define asl-rule # file suffix format
 asl-$(1).$(2): $(1).asl
 	asl $$(ASL_FLAGS) -L $$^
-	if [ $(2) = hex ]; then \
-	    p2hex $$(P2HEX_FLAGS) -F Intel   $(1).p $(1).$(2); \
-	else \
-	    p2hex $$(P2HEX_FLAGS) -F Moto +5 $(1).p $(1).$(2); \
-	fi
+	p2hex $$(P2HEX_FLAGS) -F $(3) $(1).p $(1).$(2)
 
 endef
-$(eval $(foreach f,$(ASL_TESTS),$(call asl-rule,$(f),$(call out-fmt,$(f)))))
+$(eval $(foreach f,$(ASL_TESTS),$(call asl-rule,$(f),$(call out-ext,$(f)),$(call out-fmt,$(f)))))
 
 asl-test: clean-asl $(ASL_OUTS:%=asl-%)
 clean-asl:
 	-rm -f $(ASL_OUTS)
 
 GAS_TESTS = $(wildcard test_*.gas)
-GAS_OUTS  = $(foreach f,$(GAS_TESTS),$(f:.gas=).$(call out-fmt,$(f:.gas=)))
+GAS_OUTS  = $(foreach f,$(GAS_TESTS),$(f:.gas=).$(call out-ext,$(f:.gas=)))
 gas-test: clean-gas $(GAS_OUTS)
 clean-gas:
 	-rm -f $(GAS_OUTS)
